main.css
:root {
  --main-font: 'Nunito', sans-serif;
  --regular: 400;
  --medium: 500;
  --demibold: 600;
  --black-transparent: linear-gradient(rgba(0,0,0,0.34), rgba(0,0,0,0.34));
  --white-transparent: linear-gradient(rgba(255,255,255,0.6), rgba(255,255,255,0.6));
  --primary-transparent: linear-gradient(rgba(19,77,171,0.6), rgba(19,77,171,0.6));
  --primary: #134DAB;
  --rounded: 5px;
}

body {
  color: #fff;
  font-family: var(--main-font);
  font-weight: var(--regular);
  margin: 0;
  overflow-x: hidden;
  padding: 0;
}

a {
  color: #fff;
  text-decoration: none;
}


/* Styles organized by visual blocks */

/* Above the fold (first block) */

.above-the-fold {
  box-sizing: border-box;
  height: 800px;
  position: relative;
  padding-top: 50px;
  padding-bottom: 262px;
}

.above-the-fold:after {
  content: "";
	position: absolute;
	left: 0;
	top: 0;
	right: 0;
	bottom: 0;
	z-index: -1;
	display: block;
	background: var(--black-transparent), url('images/heroimage.png');
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
}

/* Header inside above-the-fold */

.header {
  box-sizing: border-box;
  font-weight: var(--demibold);
  margin: auto;
  position: relative;
  width: 70vw;
}

.top-logo {
  width: 200px;
}

.top-nav {
  display: inline-block;
  list-style: none;
  position: absolute;
  right: 0;
}

.top-nav ul {
  display: inline-block;
}

.top-nav li {
  display: inline-block;
  font-size: 15px;
  margin-right: 30px;
}

.button {
  background-color: var(--primary);
  border-radius: var(--rounded);
  box-sizing: border-box;
  display: inline-block;
  font-size: 18px;
  height: 50px;
  padding: 12px;
  width: 200px;
  text-align: center;
}

/* Content in above-the-fold */

.above-the-fold__content {
  margin: 166px auto;
  font-size: 16px;
  width: 550px;
}

.section-head {
  font-weight: var(--demibold);
  font-size: 44px;
  line-height: 48px;
  margin: 32px 0;
}

.above-the-fold__text {
  margin: auto;
  max-width: 450px;
}

.centered {
  text-align: center;
}

/* Drawing the play button */

.play-button--round {
  background: var(--primary);
  border-radius: 50%;
  height: 80px;
  margin: 16px auto;
  position: relative;
  width: 80px;
}

.play-button__triangle {
  box-sizing: border-box;
  border-color: transparent transparent transparent #fff;
  border-style: solid;
  border-width: 12px 0px 12px 18px;
  background: var(--primary);
  height: 23px;
  width: 18px;
  position: absolute;
  bottom: 29px;
  left: 33px;
}

.vertical-spacer {
  background-color: #fff;
  height: 76px;
  width: 1px;
  position: absolute;
  left: 50%;
  bottom: 106px;
}


/* Logo scroller (second block) */

.logo-scroller {
  height: 254px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 2003px;
  margin-left: calc((2003px - 100vw) / -2);
}


/* Solutions (third block) */

.solutions {
  height: 720px;
}

.solutions__left {
  background-color: var(--primary);
  float: left;
  height: 100%;
  width: 50%;
}

.solutions__content {
  width: 563px;
  margin: 169px auto 121px auto;
}

.solutions__text {
  font-size: 16px;
  line-height: 26px;
  text-align: justify;
  width: 517px;
}

.selectors {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: 97px auto 119px auto;
  width: 72px;
}

.selector {
  background: var(--white-transparent);
  border-radius: 50%;
  display: inline-block;
  height: 10px;
  width: 10px;
}

.selector--active {
  background: #fff;
  height: 14px;
  width: 14px;
}

.solutions__right {
  float: right;
  position: relative;
  height: 100%;
  width: 50%;
}

.solutions__right:after {
  content: "";
	position: absolute;
	left: 0;
	top: 0;
	right: 0;
	bottom: 0;
	z-index: -1;
	display: block;
	background: var(--primary-transparent), url('images/guyonphone.png');
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
}

/* Text meant only for screen readers. */
/* From WordPress */

.screen-reader-text {
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  word-wrap: normal !important;
}

